# rt-llama

./: .env.sample  README.md  app.py  pyproject.toml  web_server.py
src/rt_llama/: __init__.py  capture.py  groq_client.py  smbnv_client.py
static/: script.js  style.css
templates/: index.html
