[project]
name = "rt-llama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "neka-nat", email = "nekanat.stock@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.121.3",
    "groq>=0.36.0",
    "opencv-python>=4.12.0.88",
    "python-dotenv>=1.2.1",
    "sambanova>=1.2.0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
